# ai

./: .gitattributes  .gitignore  Cargo.toml  Containerfile  Containerfile.combined  Containerfile.composed  Makefile  README.md  deny.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/prompts/: automated-review.md
.github/workflows/: benchmarks.yaml  codeql.yaml  conformance.yaml  container.yaml  conventions.yaml  coverage.yaml  documentation.yaml  fuzz.yaml  integration.yaml  issue-triage.yaml  microbenchmarks.yaml  msrv.yaml  nightly.yaml  praxis-compat.yaml  publish.yaml  release.yaml  supply-chain.yaml  tests.yaml  vllm-integration.yaml  website.yaml
apis/src/: lib.rs
core/src/config/: default.yaml
docs/: anthropic-messages.md  features.md
docs/architecture/: agentic-protocols.md  filter-pipeline.md  pingora-integration.md  system-design.md
docs/configuration/: overview.md
docs/development/: benchmarks.md  contributing.md  proposals.md  release.md  testing.md
docs/filters/: custom-filters.md  filter-model.md  grid_route.md  reference.md
docs/getting-started/: features.md  installation.md  introduction.md  quickstart.md
docs/protocols/: _category_.json  tls.md
docs/security/: hardening.md
examples/: README.md
examples/configs/: a2a-classifier-routing.yaml  grid-route-overlay.yaml
examples/configs/ai/: prompt-enrichment.yaml  (+2 more)
filter/: Cargo.toml
filter/proto/: Cargo.toml  build.rs
filter/src/: registry.rs
filters/: Cargo.toml
filters/src/: lib.rs
filters/src/agentic/a2a/: config.rs  mod.rs
filters/src/agentic/mcp/: mod.rs
filters/src/agentic/mcp/broker/: mod.rs
filters/src/grid/: descriptor.rs  mod.rs  overlay.rs  route.rs
integrations/llmd/mock-epp/: Cargo.toml  Containerfile
integrations/llmd/mock-epp/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: lib.rs  pipelines.rs
tests/schema/: Cargo.toml
website/: docusaurus.config.ts  package-lock.json
website/blog/: 2026-06-02-welcome.md
website/static/: CNAME
xtask/src/: echo.rs  filter_docs.rs
(+93 files in other folders)
