[package]
name = "praxis-ai-filters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "AI filter implementations for Praxis"
license.workspace = true
repository.workspace = true

[lib]
name = "praxis_ai_filters"

[features]
default = ["apis"]
apis = ["praxis-ai-apis/default"]
praxis-main = []

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
notify = { workspace = true }
praxis-ai-apis = { workspace = true }
praxis-core = { workspace = true }
praxis-filter = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
