[package]
name = "praxis-ai-mock-epp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Deterministic mock llm-d EPP for Praxis AI integration tests"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "mock-epp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
praxis-ai-llmd-ext-proc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
